[gd_scene load_steps=13 format=3 uid="uid://iasfcg88c4sb"]

[ext_resource type="Script" path="res://levels/default/default.gd" id="1_dkhqu"]
[ext_resource type="PackedScene" uid="uid://nxrkrpymwik1" path="res://entities/player/player.tscn" id="2_evhup"]
[ext_resource type="PackedScene" path="res://entities/gameplay_camera/gameplay_camera.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://dey3trujnu83q" path="res://globals/sfx/audio/enviroment/wind_loop.wav" id="4"]
[ext_resource type="Material" path="res://addons/kenney_prototypes/assets/colors/dark/materials/material_004.tres" id="4_sqhbd"]
[ext_resource type="Material" path="res://addons/kenney_prototypes/assets/colors/light/materials/material_009.tres" id="5_ccnoe"]
[ext_resource type="Material" path="res://addons/kenney_prototypes/assets/colors/purple/materials/material_009.tres" id="6_e5o6w"]
[ext_resource type="PackedScene" uid="uid://celdt7e0rapnk" path="res://entities/camera_hint/camera_hint.tscn" id="8_0ripk"]

[sub_resource type="Environment" id="1"]
background_mode = 1
background_color = Color(0.631373, 0.913725, 1, 1)
ssao_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(0.87451, 0.968627, 1, 1)
volumetric_fog_emission = Color(0.698039, 0.929412, 1, 1)

[sub_resource type="Animation" id="Animation_i38th"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node3D4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-28.6046, 8.52119, 13.434)]
}

[sub_resource type="Animation" id="Animation_uitor"]
resource_name = "Rope Wiggle"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Node3D4:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-28.6046, 8.52119, 13.434), Vector3(-29.5171, 8.52119, 13.434)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tldy5"]
_data = {
"RESET": SubResource("Animation_i38th"),
"Rope Wiggle": SubResource("Animation_uitor")
}

[node name="Default" type="Node3D"]
script = ExtResource("1_dkhqu")

[node name="Player1" parent="." node_paths=PackedStringArray("companion") instance=ExtResource("2_evhup")]
transform = Transform3D(1, 1.04116e-09, -3.70394e-09, -9.86619e-10, 1, 6.62831e-10, -3.30678e-09, -5.62809e-10, 1, -16.6851, 1.78531, 10.2716)
companion = NodePath("../Player2")

[node name="Player2" parent="." node_paths=PackedStringArray("companion") instance=ExtResource("2_evhup")]
transform = Transform3D(1, 1.04116e-09, -3.70394e-09, -9.86619e-10, 1, 6.62831e-10, -3.30678e-09, -5.62809e-10, 1, -18.3356, 1.78531, 10.2716)
player_number = 2
companion = NodePath("../Player1")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.875861, -0.228919, 0.424811, 0, 0.88032, 0.47438, -0.482564, -0.415491, 0.771038, 0, 8.40226, 0)
light_color = Color(1, 0.992157, 0.937255, 1)
light_energy = 1.5
shadow_enabled = true

[node name="GameplayCamera" parent="." instance=ExtResource("3")]
debug = true
distance = 5.0
yaw = -90.0
speed = 1.0

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.710208, -0.0186935, 0.703743, 0.0181654, 0.999801, 0.00822541, -0.703757, 0.006942, 0.710407, 4.51594, 30.9783, -35.1081)
stream = ExtResource("4")
autoplay = true
max_distance = 50.0

[node name="Ground" type="CSGBox3D" parent="."]
material_override = ExtResource("4_sqhbd")
use_collision = true
size = Vector3(100, 1, 100)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51739, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D41" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0086, 1.25809, 0.514658)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2.00549, 1.5, 1)

[node name="CSGBox3D42" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.5272, 1.25809, 0.514658)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2.00549, 1.97809, 1)

[node name="CSGBox3D43" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.9238, 1.25809, 0.514658)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2.00549, 1.97809, 1)

[node name="CSGBox3D38" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0015, 2.25175, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 0.510384, 2)

[node name="CSGBox3D39" type="CSGBox3D" parent="."]
transform = Transform3D(0.973901, -0.226974, 0, 0.226974, 0.973901, 0, 0, 0, 1, -14.555, 2.25175, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 0.510384, 2)

[node name="CSGBox3D53" type="CSGBox3D" parent="."]
transform = Transform3D(0.372129, -0.928181, 0, 0.928181, 0.372129, 0, 0, 0, 1, -22.5745, 2.25175, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(6.31143, 0.510384, 2)

[node name="CSGBox3D54" type="CSGBox3D" parent="."]
transform = Transform3D(0.0812254, -0.996696, 0, 0.996696, 0.0812254, 0, 0, 0, 1, -25.129, 2.25175, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(6.31143, 0.510384, 2)

[node name="CSGBox3D44" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -14.4795, 1.25809, 7.51799)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(1, 1.5, 1)

[node name="CSGBox3D45" type="CSGBox3D" parent="."]
transform = Transform3D(0.973901, -0.226974, 0, 0.226974, 0.973901, 0, 0, 0, 1, -14.555, 2.25175, 7.51799)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 0.510384, 2)

[node name="CSGBox3D46" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.0177, 1.25809, 7.51799)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(1, 1.5, 1)

[node name="CSGBox3D47" type="CSGBox3D" parent="."]
transform = Transform3D(0.94744, 0.319935, 0, -0.319935, 0.94744, 0, 0, 0, 1, -12.7728, 2.16218, 7.51799)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 0.510384, 2)

[node name="CSGBox3D40" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.975519, -0.219914, 0, 0.219914, 0.975519, -18.9292, 2.25175, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 0.510384, 2)

[node name="CSGBox3D21" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 1.4709, 1.5391, 13.7849)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D34" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1.4709, 1.5391, 15.9131)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D26" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.573576, 0.819152, 0, -0.819152, 0.573576, 4.94026, 1.5391, 13.3504)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D27" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.422618, 0.906308, 0, -0.906308, 0.422618, 8.54564, 1.77666, 13.1335)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D28" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.258819, 0.965926, 0, -0.965926, 0.258819, 12.0374, 1.77666, 12.8745)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D29" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.0871558, 0.996195, 0, -0.996195, 0.0871558, 15.5653, 1.77666, 12.614)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D22" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.819152, 0.573576, 0, -0.573576, 0.819152, -1.98283, 1.23161, 13.9231)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D30" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.819152, -0.573576, 0, 0.573576, 0.819152, -1.98283, 1.23161, 16.6306)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D23" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, 0.422618, 0, -0.422618, 0.906308, -5.45902, 0.880034, 13.9977)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D31" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.906308, -0.422618, 0, 0.422618, 0.906308, -5.45902, 0.880034, 17.208)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D24" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, -9.01251, 0.532844, 14.0578)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D32" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.965926, -0.258819, 0, 0.258819, 0.965926, -9.01251, 0.532844, 17.6683)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D25" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996195, 0.0871557, 0, -0.0871557, 0.996195, -12.5557, 0.175468, 14.0399)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D33" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.996195, -0.0871557, 0, 0.0871557, 0.996195, -12.5557, 0.175468, 17.9415)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 1, 4)

[node name="CSGBox3D8" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.49632, -3.00986)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 4, 2)

[node name="CSGBox3D9" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.48092, -5.95631)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 8, 2)

[node name="CSGBox3D10" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.48092, -13.9958)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 8, 4)

[node name="CSGBox3D11" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.48092, -24.0256)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 8, 4)

[node name="CSGBox3D12" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.038, 4.48092, -24.9485)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 8, 4)

[node name="CSGBox3D14" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.038, 5.4318, -20.9421)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 10, 4)

[node name="CSGBox3D15" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0275, 7.19165, -19.4359)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 13, 4)

[node name="CSGBox3D16" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.0275, 7.63851, -28.9505)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 14, 4)

[node name="CSGBox3D17" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0811136, 8.81446, -31.1682)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(8, 16, 4)

[node name="CSGBox3D18" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0361838, 9.04422, -35.1795)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 17, 4)

[node name="CSGBox3D19" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.03084, 9.04422, -35.1795)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 20, 4)

[node name="CSGBox3D20" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.10777, 9.39337, -35.9685)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 18, 2)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(0.912599, 0, 0.408856, 0, 1, 0, -0.408856, 0, 0.912599, 9.211, 1.51739, -3.34229)
use_collision = true

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D67" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.843972, 0, 0.536387, 0, 1, 0, -0.536387, 0, 0.843972, 1.21387, 4.76837e-07, 0.91065)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D68" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.945097, 0, -0.326789, 0, 1, 0, 0.326789, 0, 0.945097, 3.5696, 0, 0.608411)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D69" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(0.998416, 0, 0.056257, 0, 1, 0, -0.056257, 0, 0.998416, 3.77425, 9.53674e-07, -0.952055)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D36" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0485, 6.58835, -36.9476)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(4, 12, 4)

[node name="CSGBox3D37" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.0311, 8.50454, -36.8897)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 16, 2)

[node name="CSGBox3D13" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.30491, 8.75008, -24.9485)
material_override = ExtResource("6_e5o6w")
use_collision = true
size = Vector3(11, 0.5, 0.5)

[node name="CSGBox3D48" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.8575, 1.51739, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D67" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -18.4796, 3.78899, 13.4789)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 6.56069, 2)

[node name="CSGBox3D68" type="CSGBox3D" parent="."]
transform = Transform3D(0.834223, 0, 0.551427, 0, 1, 0, -0.551427, 0, 0.834223, -22.7121, 5.96475, 13.4789)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2.15547, 2)

[node name="CSGBox3D50" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.4559, 1.51739, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D61" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.0418, 2.53664, 0)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 4, 2)

[node name="CSGBox3D49" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.0058, 1.51739, 4.99747)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 2, 2)

[node name="CSGBox3D52" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.9513, 5.85614, 4.99747)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 3.41733, 2)

[node name="CSGBox3D51" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.0139, 2.78714, 4.98977)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.44648, 6.1111, 1.51722)

[node name="CSGBox3D55" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 23.8143, 3.66281, 4.99747)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 2, 2)

[node name="CSGBox3D56" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 22.1638, 6.53298, 4.99747)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 3.41733, 2)

[node name="CSGBox3D57" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 23.1425, 4.74125, 4.98977)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.44648, 6.1111, 1.51722)

[node name="CSGBox3D58" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 23.8227, 3.66281, 4.9889)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 2, 2)

[node name="CSGBox3D59" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 22.1722, 6.53298, 4.9889)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.8735, 3.41733, 2)

[node name="CSGBox3D60" type="CSGBox3D" parent="."]
transform = Transform3D(0.866888, -0.498503, 0, 0.498503, 0.866888, 0, 0, 0, 1, 23.151, 4.74125, 4.98121)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(7.44648, 6.1111, 1.51722)

[node name="CSGBox3D5" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51739, 8.03201)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 2, 2)

[node name="CSGBox3D63" type="CSGBox3D" parent="."]
transform = Transform3D(0.872496, -0.488621, 0, 0.488621, 0.872496, 0, 0, 0, 1, 0, 1.51739, 22.2691)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(8.91863, 2, 0.430073)

[node name="CSGBox3D64" type="CSGBox3D" parent="."]
transform = Transform3D(0.957752, -0.287594, 0, 0.287594, 0.957752, 0, 0, 0, 1, 0, 1.51739, 24.2393)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(8.91863, 2, 0.430073)

[node name="CSGBox3D65" type="CSGBox3D" parent="."]
transform = Transform3D(0.988806, -0.149207, 0, 0.149207, 0.988806, 0, 0, 0, 1, 0, 1.51739, 26.2406)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(8.91863, 2, 0.430073)

[node name="CSGBox3D66" type="CSGBox3D" parent="."]
transform = Transform3D(0.788279, -0.615317, 0, 0.615317, 0.788279, 0, 0, 0, 1, 0, 1.51739, 20.2573)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(8.91863, 2, 0.430073)

[node name="CSGBox3D7" type="CSGBox3D" parent="."]
transform = Transform3D(0.973329, -0.225766, -0.0407494, 0.229398, 0.959918, 0.161043, 0.00275809, -0.166095, 0.986106, 5.94521, 1.51739, 7.01968)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 3.03848, 2)

[node name="CSGBox3D62" type="CSGBox3D" parent="."]
transform = Transform3D(0.973329, -0.225766, -0.0407494, 0.229398, 0.959918, 0.161043, 0.00275809, -0.166095, 0.986106, 5.94521, 0.516311, 0.665951)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(2, 3.03848, 2)

[node name="CSGBox3D2" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5914, 1.12446, 3.52767)
material_override = ExtResource("5_ccnoe")
use_collision = true

[node name="CSGBox3D3" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5914, 1.12446, 3.52767)
material_override = ExtResource("5_ccnoe")
use_collision = true

[node name="CSGBox3D4" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.76379, 0.800822, 6.23782)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(0.5, 0.5, 0.5)

[node name="CSGBox3D35" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.78319, 17.7957, -34.4285)
material_override = ExtResource("5_ccnoe")
use_collision = true
size = Vector3(0.5, 0.5, 0.5)

[node name="DebugPosition" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.74475, 16.4019, -19.303)

[node name="CameraHint" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(10.0408, 0, 0, 0, -2.20251, 0, 0, 0, -1, 6.25429, 9.45081, -25.1809)
gameplay_camera = NodePath("../GameplayCamera")
pitch = 70.0
distance_enabled = false
yaw_enabled = false

[node name="CameraHint2" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(3.31081, 0, 0, 0, 3.31081, 0, 0, 0, 3.31081, 13.9007, 11.1341, -21.5204)
gameplay_camera = NodePath("../GameplayCamera")
yaw = 90.0
return_to_previous_settings = false

[node name="CameraHint3" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(3.31081, 0, 0, 0, 3.31081, 0, 0, 0, 3.31081, -0.859268, 9.45081, -24.7392)
gameplay_camera = NodePath("../GameplayCamera")
return_to_previous_settings = false

[node name="CameraHint5" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(22.4003, 0, 0, 0, 3.31081, 0, 0, 0, 38.3567, -10.5635, 1.44659, -22.7188)
gameplay_camera = NodePath("../GameplayCamera")
return_to_previous_settings = false

[node name="CameraHint4" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(7.61318, 0, 0, 0, 7.61318, 0, 0, 0, 7.61318, -2.99918, 23.0982, -34.8987)
gameplay_camera = NodePath("../GameplayCamera")
players_required = 2
distance = 20.0
yaw = 150.0
pitch_enabled = false

[node name="CameraHint6" parent="." node_paths=PackedStringArray("gameplay_camera") instance=ExtResource("8_0ripk")]
transform = Transform3D(10.7567, 0, 0, 0, 12.0885, 0, 0, 0, 7.61318, -13.1446, 16.445, -34.8987)
gameplay_camera = NodePath("../GameplayCamera")
pitch = 40.0
yaw = 180.0

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.82918, 1.14727, 0)
use_collision = true
radius = 1.52487
sides = 16

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.7182, 1.14727, 6.23915)
use_collision = true
radius = 1.52487
sides = 32

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="."]
transform = Transform3D(2.35911, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -7.04968, 1.14727, 8.89407)
use_collision = true
radius = 1.52487
height = 0.66053
sides = 16

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="."]
transform = Transform3D(0.817579, 0, 0, 0, -4.36386e-08, -0.998334, 0, 0.998334, -4.36386e-08, -7.04968, 1.14727, 10.8643)
use_collision = true
radius = 1.52487
height = 0.66053
sides = 16

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Rope4")
autoplay = "Rope Wiggle"
playback_speed = 3.0
libraries = {
"": SubResource("AnimationLibrary_tldy5")
}
